--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,15 @@ dependencies:
   # record packages doesn't support raw PCM 16-bit format on linux.
   record: ^6.1.2
   sherpa_onnx: ^1.12.14
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  build_runner: ^2.4.13
+  hive_generator: ^2.0.1
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
