Added support for running in the background
* used flutter_foreground_task library to run foregorund tasks
* Repository (and therefore AudioStreamService and SherpaKwsService) run in a foregorund task (separate isolate)
* TrackingViewModel registers a callback triggered when a Keyword is recevied from the foreground service instead of listening to Repository for detected keywords
* Updated AndroidManifest.xml accordingly
* tacker/data/foreground tracker_service.dart and tracker_task_handler.dart architacture is taken from flutter_foreground_task docs: https://pub.dev/packages/flutter_foreground_task and example app: https://github.com/Dev-hwang/flutter_foreground_task_example/tree/main/record_service/lib/service

* Minor modification to AudioStreamService since we cannot check for permission inside it anymore (it will be running in an isolate). permission are checked in TrackerService.requestPermissions()
* General improvement in MyApp() to accomodate the changes
* Focused on Android and untested iOS

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -30,6 +30,12 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+
+        <!-- Foreground service declaration -->
+        <service
+            android:name="com.pravera.flutter_foreground_task.service.ForegroundService"
+            android:exported="false"
+            android:foregroundServiceType="microphone" />
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
@@ -42,4 +48,10 @@
             <data android:mimeType="text/plain"/>
         </intent>
     </queries>
+
+    <!-- Permissions -->
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MICROPHONE"/>
+    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"/>
 </manifest>
