Added functional stats page
* Added fl_chart to pubspec.yaml for chart plotting
* Updated MyApp() to include the statsViewModel provider
* Added statsViewModel to hold the Statspage stats and interface with the TrackingRepository. Includes useful functions for stats UI
* Stats Page includes a row of StatsCard that show daily/weekly/monthly stats
* Stats Page includes a chart container with a fl_chart bar chart to show last X days stats. Currently only two options exist 7d, 30d
* Chart in 7d mode has differnet style than 30d mode

* Updated TrackingRepository to include mechanism to retreive a Map of last X days elements of another Map grouped by day.
* In the TrackingRepository, _groupKeywordsByDay() returns a Map<DateTime, List<TrackedKeyword>> that reorganizes a given TrackedKeyword List, this is used with the _cachedKeywords to reorganize it in a Map<DateTime, List<TrackedKeyword>>

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   intl: ^0.20.2
   flutter_foreground_task: ^9.1.0
   flutter_exit_app: ^2.0.0
+  fl_chart: ^1.1.1
 
 dev_dependencies:
   flutter_test:
